# AMSA

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
documentation/: prerelease.md
examples/: even_odd_decomposition.py  signed_volume_3d.py  triangle_area_2d.py
examples/geoemetry/: triangle_area_2d.py
examples/geometry/: orientation_batch_2d.py
examples/kernels/: geometric_kernels.py
examples/planes/: point_plane_distance_3d.py
src/amsa/: __init__.py  algebra.py  layouts.py  mv.py  ops.py  plans.py  reference.py  specs.py  storage.py
tempo/: _bootstrap.py  challenge1.py  challenge10_geometry_kernel.py  challenge2.py  challenge2_orientation_batch.py  challenge3.py  challenge3_signed_volume.py  challenge4.py  challenge4_product_decomposition.py  challenge5.py  challenge6_even_odd_decomposition.py  challenge7_rotor_inspector.py  challenge8_pga_null_blade.py  challenge9_backend_comparision.py  run_all_probes.py
tests/: __init__.py  _utils.py  test_layouts.py  test_ops.py  test_specs.py
